# drf-permission-rules

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linters.yml  publish.yml
permission_rules/: __init__.py  admin.py  app_settings.py  apps.py  connect.py  fields.py  mixins.py  models.py  permission.py  serializers.py  signals.py  urls.py  utils.py  views.py
permission_rules/migrations/: 0001_initial.py  0002_auto_20210729_0731.py
permission_rules/services/: permission_rules_file.py  permission_rules_getter.py  permissions_getter.py
